  an ArithmeticException.

- DateTimeZone
  Handles offset calculation overflow errors for instants near Long.MAX_VALUE,
  ending the offset transition sequence.

- DateTimeFormatter
  Reverts to UTC if time zone offset calculation causes overflow. This allows at least
  the time of day fields to be printed for instants near Long.MIN_VALUE or Long.MAX_VALUE.

- CopticChronology
  Fixed regression in month of year calculation which affected getMaximumValue
  on dayOfMonth field.

- ZonedChronology
  Fixed getting text values for fields from getAs[Short]Text(int value, Locale locale).

- DateConverter, CalendarConverter, AbstractDateTime
  Fixed conversions to and from java.util.Date and java.util.Calendar where
  time zone rules differ between JDK and Joda-Time.

- DateTimeFormatter
  Fixed printing of time zone name near DST transition.


Enhancements since 1.1
----------------------
- EthiopicChronology
  New Chronology which implements similar rules to Coptic

- ChronologyType
  New type that acts as a factory for creating Chronology instances
  Chronology.getType() returns the type

- DateTime/DateMidnight/MutableDateTime.getChronologyType
- DateTime/DateMidnight.withChronologyType
- MutableDateTime.setChronologyType
  Gets and sets the chronology type

- DateTime.Property.toInterval() (also DateMidnight/MutableDateTime)
  New method to convert return an Interval object over the span of the property
  Thus dt.monthOfYear().toInterval() returns an interval from the start to
  the end of the month

- MutableDateTime.property(DateTimeFieldType)
  Gets the property by type. Complements the method already on DateTime/DateMidnight.

- FieldUtils
  Performance optimization when adding by scalars of one or negative one. The
  overflow detecting multiplication skips the multiply and divide check for
  these values.


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team